--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "project-neue",
   "main": "./lib/project-neue",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Atom project manager for 1.17.0+",
   "keywords": [],
   "repository": "https://github.com/xream/atom-project-neue",
@@ -10,7 +10,10 @@
     "atom": ">=1.17.0 <2.0.0"
   },
   "activationCommands": {
-    "atom-workspace": ["project-neue:toggle", "project-neue:last"]
+    "atom-workspace": [
+      "project-neue:toggle",
+      "project-neue:last"
+    ]
   },
   "dependencies": {
     "atom-space-pen-views": "^2.2.0"
