--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     ]
   },
   "dependencies": {
-    "atom-space-pen-views": "^2.2.0"
+    "atom-space-pen-views": "^2.2.0",
+    "fs-plus": "^3.0.0"
   }
 }
